<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="election"
            type="com.example.android.politicalpreparedness.network.models.Election" />

        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:day="@{voterInfoViewModel.election.electionDay}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/election_information"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> voterInfoViewModel.navigateToUrl(voterInfoViewModel.administrationBody.votingLocationFinderUrl)}"
            android:text="@string/voting_locations"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> voterInfoViewModel.navigateToUrl(voterInfoViewModel.administrationBody.ballotInfoUrl)}"
            android:text="@string/ballot_information"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{voterInfoViewModel.visibility()}"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/correspondence_address"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{voterInfoViewModel.correspondenceAddress}"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <Button
            android:id="@+id/follow_election_btn"
            android:layout_width="@dimen/margin_320"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_16"
            android:backgroundTint="@color/colorPrimaryDark"
            android:enabled="@{voterInfoViewModel.election != null}"
            android:onClick="@{() -> voterInfoViewModel.toggleFollowElection()}"
            android:text="@string/follow_election"
            android:textColor="@color/white"
            app:followOrUnfollow="@{voterInfoViewModel.isElectionSaved}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>