<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="representativeViewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/my_representatives"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/header_representative_search"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/default_padding"
                android:autofillHints=""
                android:hint="@string/edit_address_line_1"
                android:inputType="textPostalAddress"
                android:text="@{representativeViewModel.address.line1}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:autofillHints=""
                android:hint="@string/edit_address_line_2"
                android:inputType="textPostalAddress"
                android:text="@{representativeViewModel.address.line2}"
                app:layout_constraintEnd_toEndOf="@+id/address_line_1"
                app:layout_constraintStart_toStartOf="@+id/address_line_1"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />

            <EditText
                android:id="@+id/city"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:autofillHints=""
                android:hint="@string/edit_city"
                android:inputType="textPostalAddress"
                android:text="@{representativeViewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="@+id/address_line_2"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="@dimen/margin_0"
                android:layout_height="@dimen/margin_0"
                android:autofillHints=""
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="@+id/address_line_2"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city"
                app:stateValue="@{representativeViewModel.address.state}" />

            <EditText
                android:id="@+id/zip"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:autofillHints=""
                android:hint="@string/edit_zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@{representativeViewModel.address.zip}"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="@+id/city"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/default_padding"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/find_my_representatives"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintEnd_toEndOf="@+id/state"
                app:layout_constraintStart_toStartOf="@+id/zip"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_location"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/use_my_location_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button_search"
                app:layout_constraintStart_toStartOf="@+id/button_search"
                app:layout_constraintTop_toBottomOf="@id/button_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/my_representatives"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <TextView
                android:id="@+id/representative_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/my_representatives"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_representatives"
                android:layout_width="@dimen/margin_0"
                android:layout_height="@dimen/margin_0"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/representative_title"
                app:representativeList="@{representativeViewModel.representatives}" />

            <TextView
                android:id="@+id/list_placeholder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_0"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                app:apiStatus="@{representativeViewModel.apiStatus}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                motion:visibility="visible"
                motion:visibilityMode="ignore" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>