<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

        <variable
            name="clickListener"
            type="com.example.android.politicalpreparedness.representative.view.adapter.RepresentativeListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:onClick="@{() -> clickListener.onClick(representative)}">

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="@dimen/margin_64"
            android:layout_height="@dimen/margin_64"
            android:layout_margin="@dimen/default_padding"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}" />

        <TextView
            android:id="@+id/text_office_name"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@{representative.office.name}"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="President of the US" />

        <TextView
            android:id="@+id/text_official_name"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@id/www_icon"
            app:layout_constraintStart_toEndOf="@id/representative_photo"
            app:layout_constraintTop_toBottomOf="@id/text_office_name"
            tools:text="Mike" />

        <TextView
            android:id="@+id/text_official_party"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/www_icon"
            app:layout_constraintStart_toEndOf="@id/representative_photo"
            app:layout_constraintTop_toBottomOf="@id/text_official_name"
            tools:text="Party" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="@dimen/margin_24"
            android:layout_height="@dimen/margin_24"
            android:layout_marginEnd="@dimen/default_padding"
            android:contentDescription="@string/website"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/facebook_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="@dimen/margin_24"
            android:layout_height="@dimen/margin_24"
            android:layout_marginEnd="@dimen/default_padding"
            android:contentDescription="@string/facebook"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/twitter_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="@dimen/margin_24"
            android:layout_height="@dimen/margin_24"
            android:layout_marginEnd="@dimen/default_padding"
            android:contentDescription="@string/twitter"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_twitter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>